sandbox/output
StingCalculatorTest.java:13: error: cannot find symbol
        assertEqulas(4, actual);
        ^
  symbol:   method assertEqulas(int,int)
  location: class StingCalculatorTest
1 error
